--- a/0-bootstrap/single-cluster/3-apps/kustomization.yaml
+++ b/0-bootstrap/single-cluster/3-apps/kustomization.yaml
@@ -4,9 +4,9 @@ resources:
 #- argocd/ace/stage.yaml
 #- argocd/ace/prod.yaml
 
-#- argocd/mq/cicd.yaml
-#- argocd/mq/dev.yaml
-#- argocd/mq/stage.yaml
+- argocd/mq/cicd.yaml
+- argocd/mq/dev.yaml
+- argocd/mq/stage.yaml
 #- argocd/mq/prod.yaml
 
 #- argocd/apic/cicd.yaml
